<resources>
    <string name="app_name">Digital Wallet</string>
    <string name="ma_title">DIGITAL WALLET</string>
    <string name="ma_title_txt">Welcome, \n please log in:</string>
    <string name="ma_txt_user">Username:</string>
    <string name="ma_editxt_hint_user">username</string>
    <string name="ma_txt_password">Password:</string>
    <string name="ma_editxt_hint_pass">password</string>
    <string name="ma_snackbar_inputerror">Username and Password must be between 4 and 8 chars.</string>
    <string name="ma_snackbar_badcredentials">Invalid Username / Password.</string>
    <string name="la_usercreated_msg">User Created. You can log in now.</string>
    <string name="ma_dialog_new_user_title">User don\'t exists</string>
    <string name="ma_dialog_new_user_message">Create new user? The username and password would be the one you texted.</string>
    <string name="bf_balance_uppertxt">"AVAILABLE TO SPEND"</string>
    <string name="bf_balance_msg">$ </string>
    <string name="bf_cards_message">CREDIT CARDS:</string>
    <string name="nc_frag_card_add_msg">Credit card added successfully</string>
    <string name="nc_frag_card_in_db_msg">The Card is already in your profile</string>
    <string name="cf_text_card_title">BANKCARD</string>
    <string name="cf_text_card_new">"INSERT CREDIT CARD NUMBER:"</string>
    <string name="cf_edittext_hint">CARD NUMBER</string>
    <string name="pf_button_txt">Generate QR CODE</string>
    <string name="bf_creditcard_uppertxt">CARD NUMBER:</string>
    <string name="pf_textview_amount">SET AMOUNT:</string>
    <string name="pf_edittext_hint">$ ARS</string>
    <string name="quit_dialog_title">DIGITAL WALLET</string>
    <string name="quit_dialog_msg">Do you want to close this application ?</string>
    <string name="quit_dialog_positive">Proceed</string>
    <string name="quit_dialog_negative">Cancel</string>
    <string name="ncf_invalid_card_msg">Invalid credit card.</string>
    <string name="ncf_visa_msg">VISA</string>
    <string name="ncf_american_msg">AMERICAN EXPRESS</string>
    <string name="ncf_invalid_input_msg">Please check your first digit.</string>
    <string name="pf_invalid_input">Please check the amount</string>
    <string name="pf_api_loading_error">Please check your network, or try again later</string>
    <string name="menu_item_0">Balance</string>
    <string name="menu_item_1">Add Card</string>
    <string name="menu_item_2">Payment</string>
    <string name="main_act_loading">Loading..</string>
</resources>